syntax = "proto3";

import "Protos/Common/common.proto";
import "Protos/post.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "PostFeedback.API";

package feedback;

service FeedbackForUser {

  rpc LeaveFeedback (CreateFeedbackRequest) returns (common.Response);
  rpc DeleteFeedback (common.Request) returns (common.Response);
  rpc GetFeedbackDetails (common.Request) returns (FeedbackResponse); 
  rpc GetFeedbacks (common.Request) returns (FeedbacksListResponse); 

}
service FeedbackForAccommodation {

  rpc LeaveFeedback (CreateFeedbackRequest) returns (common.Response);
  rpc DeleteFeedback (common.Request) returns (common.Response);
  rpc GetFeedbackDetails (common.Request) returns (FeedbackResponse); 
  rpc GetFeedbacks (common.Request) returns (FeedbacksListResponse); 

}
message CreateFeedbackRequest {
  google.protobuf.Int64Value userId = 1;
  google.protobuf.Int64Value itemId = 2;
  google.protobuf.Int32Value rating = 3;
  google.protobuf.StringValue message = 4;
}
message FeedbackResponse {
	int64 id = 1;
	post.User feedbackOwner = 2;
	post.User user = 3;
	post.PostResponse accommodation = 4;
	int32 rating = 5;
	google.protobuf.StringValue message = 6;
	bool noFeedback = 7;
}
message FeedbacksListResponse {
	repeated FeedbackResponse feedbacks = 1;
}